# TIC-TAC-TOE

./: README.md  TIC_TAC_TOE.py  main.py  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  main_board-checkpoint.py
notebooks/: main.ipynb
src/agent/.ipynb_checkpoints/: TIC_TAC_TOE-checkpoint.py
src/board/: board_v3.py
src/board/.ipynb_checkpoints/: board_v3-checkpoint.py
src/board/old/.ipynb_checkpoints/: board_v2-checkpoint.py
